package org.example.enums;

public enum DeliveryMethod {
    COURIER,
    PICKUP
}
