package org.example.enums;

public enum Form {
    POWDER,
    CAPSULES,
    LIQUID
}