package org.example.enums;

public enum OrderStatus {
    CREATED,
    WAITING_PAYMENT,
    PAID,
    PROCESSING,
    SHIPPED,
    DELIVERED,
    CANCELLED
}
