package org.example.enums;

public enum PaymentStatus {
    PENDING, // Ожидает оплаты
    COMPLETED,  // Оплата завершена
    FAILED  // Ошибка оплаты
}
