package org.example.enums;

public enum ProteinType {
    WHEY,
    CASEIN,
    SOY,
    COMPLEX
}