@startuml
'https://plantuml.com/sequence-diagram

class User {
    + id: Long
    + email: String
    + password: String
    + name: String
    + role: RoleEnum
    + createdAt: DateTime
    + updatedAt: DateTime
    + phoneNumber: String
}

class Product {
    + id: Long
    + name: String
    + description: String
    + price: BigDecimal
    + categoryId: Long
    + brandId: Long
    + images: List<Image>
    + proteinType: ProteinType
    + vitaminGroup: String
    + form: Form
    + createdAt: DateTime
    + updatedAt: DateTime
}

class Category {
    + id: Long
    + name: String
    + description: String
    + parentCategoryId: Long
    + createdAt: DateTime
    + updatedAt: DateTime
}

class Brand {
    + id: Long
    + name: String
    + description: String
    + createdAt: DateTime
    + updatedAt: DateTime
}

class Image {
    + id: Long
    + productId: Long
    + url: String
    + altText: String
    + createdAt: DateTime
    + updatedAt: DateTime
}

class Cart {
    + id: Long
    + userId: Long
    + totalPrice: BigDecimal
    + createdAt: DateTime
    + updatedAt: DateTime
}

class CartItem {
    + id: Long
    + cartId: Long
    + productId: Long
    + quantity: Integer
    + price: BigDecimal
    + discountPrice: BigDecimal
    + deleted: Boolean
}

class Order {
    + id: Long
    + userId: Long
    + totalAmount: BigDecimal
    + status: OrderStatus
    + deliveryMethod: DeliveryMethod
    + deliveryAddress: String
    + contactInfo: String
    + createdAt: DateTime
    + updatedAt: DateTime
}

class OrderItem {
    + id: Long
    + orderId: Long
    + productId: Long
    + productName: String
    + productDescription: String
    + productCategoryName: String
    + quantity: Integer
    + price: BigDecimal
}

class OrderStatusHistory {
    + id: Long
    + orderId: Long
    + status: OrderStatus
    + changedAt: DateTime
}

class Favorite {
    + id: Long
    + userId: Long
    + productId: Long
    + addedAt: DateTime
}

class Promotion {
    + id: Long
    + name: String
    + description: String
    + startDate: DateTime
    + endDate: DateTime
    + createdAt: DateTime
    + updatedAt: DateTime
}

class ProductPromotion {
    + id: Long
    + productId: Long
    + promotionId: Long
}

class Discount {
    + id: Long
    + productId: Long
    + discountPrice: BigDecimal
    + startDate: DateTime
    + endDate: DateTime
    + createdAt: DateTime
    + updatedAt: DateTime
}

class Payment {
    + id: Long
    + orderId: Long
    + amount: BigDecimal
    + status: PaymentStatus
    + createdAt: DateTime
    + updatedAt: DateTime
}

class Review {
    + id: Long
    + userId: Long
    + productId: Long
    + rating: Integer
    + userComment: String
    + createdAt: DateTime
    + updatedAt: DateTime
}

' Enums

enum RoleEnum {
    + USER
    + ADMIN
}

enum ProteinType {
    + WHEY
    + CASEIN
    + SOY
    + COMPLEX
}

enum Form {
    + POWDER
    + CAPSULES
    + LIQUID
}

enum OrderStatus {
    + WAITING_PAYMENT
    + PAID
    + PROCESSING
    + SHIPPED
    + DELIVERED
    + CANCELLED
}

enum DeliveryMethod {
    + COURIER
    + PICKUP
}

enum PaymentStatus {
    + PENDING
    + COMPLETED
    + FAILED
}

' Отношения

' User relationships
User "1" -- "0..*" Order : places >
User "1" -- "1" Cart : owns >
User "1" -- "0..*" Favorite : has >
User "1" -- "0..*" Review : writes >

' Product relationships
Product "1" -- "1" Category : belongs to >
Product "1" -- "1" Brand : manufactured by >
Product "1" -- "0..*" Image : has >
Product "1" -- "0..*" CartItem : added to >
Product "1" -- "0..*" Favorite : favorited by >
Product "1" -- "0..*" Discount : has >
Product "1" -- "0..*" Review : has reviews >
Product "1" -- "0..*" ProductPromotion : participates in >

' Category relationships
Category "1" -- "0..*" Product : contains >
Category "1" -- "0..*" Category : subcategories >
Category "0..1" -- "1" Category : parent category >

' Cart relationships
Cart "1" -- "0..*" CartItem : contains >
Cart "1" -- "1" User : belongs to >

' CartItem relationships
CartItem "1" -- "1" Product : refers to >
CartItem "1" -- "1" Cart : part of >

' Order relationships
Order "1" -- "0..*" OrderItem : contains >
Order "1" -- "0..*" OrderStatusHistory : has history >
Order "1" -- "1" Payment : has >
Order "1" -- "1" User : placed by >

' OrderItem relationships
OrderItem "1" -- "1" Order : part of >

' Favorite relationships
Favorite "1" -- "1" Product : refers to >
Favorite "1" -- "1" User : belongs to >

' Promotion relationships
Promotion "1" -- "0..*" ProductPromotion : includes >
ProductPromotion "1" -- "1" Product : links to >
ProductPromotion "1" -- "1" Promotion : links to >

' Discount relationships
Discount "1" -- "1" Product : applies to >

' Payment relationships
Payment "1" -- "1" Order : for >

' Review relationships
Review "1" -- "1" User : by >
Review "1" -- "1" Product : for >

' Image relationships
Image "1" -- "1" Product : of >

' Brand relationships
Brand "1" -- "0..*" Product : produces >
@enduml